Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24325

Windows: QMenu autotest fails

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.0.0
    • 5.0.0
    • None
    • Windows 7, MSVC 64bit
    • 446d63be1b85284d6175b4781859d14668755ae3

      Windows: QMenu autotest fails:

      FAIL!  : tst_QMenu::mouseActivation() 'submenu.isVisible()' returned FALSE. ()
      .\tst_qmenu.cpp(301) : failure location
      

      Rememeber to enable test in CI when the issue is fixed.

        For Gerrit Dashboard: QTBUG-24325
        # Subject Branch Project Status CR V

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes